change status media query src

--- a/Project/src/index.html
+++ b/Project/src/index.html
@@ -1659,7 +1659,7 @@
                     <img src="img/splitter.gif" width="17" height="14" alt="">
                     <a class="link" href="#">Личный Кабинет</a>
                     <img src="img/splitter.gif" width="17" height="14" alt="">
-                    <a class="link" href="#">Регистрация новогопользователя</a>
+                    <a class="link" href="#">Регистрация нового пользователя</a>
                 </div>
                 <h1>регистрация нового пользователя</h1>
                 <div class="personal">
@@ -1968,7 +1968,7 @@
                 </div>
                 <div class="cont">
                     <div>E-mail:</div>
-                    <a class="ch" href="info@perstigmatras.ru">sales@prestigmatras.ru</a>
+                    <a class="ch" href="info@perstigmatras.ru"> info@prestigmatras.ru</a>
                 </div>
             </div>
             <div class="wt5 ord">
