function onclick for filter

--- a/Project/src/index.html
+++ b/Project/src/index.html
@@ -1161,7 +1161,7 @@
                 <div class="link-menu"> 
                     <a class="link" href="#">Главная</a>
                     <img src="img/splitter.gif" width="17" height="14" alt="">
-                    <b style="">Матрасы</b> 
+                    <p><b style="">Матрасы</b></p>
                 </div>
                 <div class="prod-wrap">
                     <div class="prodpics">
@@ -1183,7 +1183,7 @@
                     <img src="img/splitter.gif" width="17" height="14" alt="">
                     <a class="link" href="#">Матрасы</a>
                     <img src="img/splitter.gif" width="17" height="14" alt="">
-                    <b style="">Аскона</b> 
+                    <p><b style="">Аскона</b></p>
                 </div>
                 <h1 class="none">аскона</h1>
                 <h1 class="bsnone">ортопедические матрасы аскона</h1>
@@ -1396,7 +1396,7 @@
                     <img src="img/splitter.gif" width="17" height="14" alt="">
                     <a class="link" href="#">Аскона</a>
                     <img src="img/splitter.gif" width="17" height="14" alt="">
-                    <b style="">Terapia</b> 
+                    <p><b style="">Terapia</b></p>
                 </div>
                 <h1>terapia</h1>
                 <div class="catalogdesc_1">TERAPIA - серия матрасов на пружинном блоке <i>Песочные часы Extra 5 зон</i> с допустимой нагрузкой на одно спальное место до 140 кг.<br>
@@ -1491,7 +1491,7 @@
                     <img src="img/splitter.gif" width="17" height="14" alt="">
                     <a class="link" href="#">Terapia</a>
                     <img src="img/splitter.gif" width="17" height="14" alt="">
-                    <b style="">Матрас Аскона Terapia PULSE</b> 
+                    <p><b>Матрас Аскона Terapia PULSE</b></p>
                 </div>
                 <div class="catal_item">
                     <p class="catal_item_name" href="#"><b>матрас аскона terapia pulse</b></p>
@@ -1657,9 +1657,9 @@
                 <div class="link-menu"> 
                     <a class="link" href="#">Главная</a>
                     <img src="img/splitter.gif" width="17" height="14" alt="">
-                    <a class="link" href="#">Личный Кабинет</a>
+                    <p>Личный Кабинет</p>
                     <img src="img/splitter.gif" width="17" height="14" alt="">
-                    <a class="link" href="#">Регистрация нового пользователя</a>
+                    <p>Регистрация нового пользователя</p>
                 </div>
                 <h1>регистрация нового пользователя</h1>
                 <div class="personal">
@@ -1752,8 +1752,13 @@
             <fieldset class="fieldset none">
                 <legend>подбор матраса</legend>
             </fieldset>
-                <div class="green_filter showfil none">
-                    <div class="lineForm boxfiltr">
+            <div class="showfil none">
+                <div class="green_filter boxfiltr">
+                    <p class="box_cap">фильтр</p>
+                    <div class="close">
+                        <img src="img/error.png" alt="">
+                    </div>
+                    <div class="lineForm">
                         <form name="sortPodbor" id="sortPodbor" method="post" action="/selection/">
                             <label for="width">Ширина, см *:</label>
                             <div class="select-wrap">
@@ -1829,6 +1834,7 @@
                         </form>
                     </div>
                 </div>
+            </div>
             <!-- </fieldset> -->
             <fieldset class="fieldset">
                 <legend>акции</legend>
