--- a/Project/index.html
+++ b/Project/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Купить ортопедический матрас в интернет-магазине Матрасов и кроватей PrestigMatras.ru г.Москва</title>
-    <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> 
     <link rel="stylesheet" href="css1/stylebs.css">
     <link rel="stylesheet" href="css1/media_queries_320.css">
