--- a/Apelsin_test/index.html
+++ b/Apelsin_test/index.html
@@ -135,11 +135,32 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td><a href="#">Los Angeles - Teterboro</a></td>
-					<td><a href="#">28 февраля 2018 года</a></td>
+					<td><a class="title" id="anchor" href="#">Los Angeles - Teterboro</a></td>
+					<td><a class="day" href="#">28 февраля 2018 года</a></td>
 					<td><a href="#">LearJet 45 XR</a></td>
-					<td><a class="order" href="#">заказать рейс</a></td>
+					<td><a class="order" href="#enchor">заказать рейс</a></td>
 				</tr>
+
+
+<!-- <ul>
+    <li class="div2">
+        <img src="img/arrbluesm.png"> 
+        <div class="title">Заголовок 1</div>
+        <div class="txt">текст 1</div>
+    </li>
+    <li class="div2">
+        <img src="img/arrowblack.png"> 
+        <div class="title">Заголовок 2</div>
+        <div class="txt">текст 2</div>
+    </li>
+    <li class="div2">
+        <img src="img/arrowblue.png"> 
+        <div class="title">Заголовок 3</div>
+        <div class="txt">текст 3</div>
+    </li>
+</ul> -->
+
+
 				<tr>
 					<td><a href="#">Boca Raton - West Chicago</a></td>
 					<td><a href="#">28 февраля 2018 года</a></td>
@@ -265,48 +286,33 @@
 
 
 
-<ul>
-    <li class="div2">
-        <img src="img/arrbluesm.png"> 
-        <div class="title">Заголовок 1</div>
-        <div class="txt">текст 1</div>
-    </li>
-    <li class="div2">
-        <img src="img/arrowblack.png"> 
-        <div class="title">Заголовок 2</div>
-        <div class="txt">текст 2</div>
-    </li>
-    <li class="div2">
-        <img src="img/arrowblue.png"> 
-        <div class="title">Заголовок 3</div>
-        <div class="txt">текст 3</div>
-    </li>
-</ul>
+
 
 
 
 	<script>
- $(function() {
-     /* создание попапа с кнокой закрытия и затемняющего блока  */
+ $(function($) {
+	 /* создание попапа с кнокой закрытия и затемняющего блока  */
   $("body").append("<div class='overlay'></div><div id='popup'><span class='close'></span><div id='popup_inner'></div></div>");
-     /* клик по элементу списка  */
- $('li').click(function() {
-     /* очищаю содержимое попапа  */
-    $("#popup_inner").empty();
-     /* теперь по очереди переношу в сплывающий блок заголовок, картинку и текст */
-    $("#popup_inner").append($(this).html());
-    /* отображаю затемнение*/
-    $(".overlay").show();
-    /* центрирую попап по высоте, т.к. блок не фиксированной высоты и отображаю*/
-    var height = "-" + ($("#popup").height()+66)/2 + "px";
-    $("#popup").show().animate({marginTop:height}, 500);
- 
+	 /* клик по элементу списка  */
+ $('.order').click(function() {
+	 /* очищаю содержимое попапа  */
+	$("#popup_inner").empty();
+	 /* теперь по очереди переношу в сплывающий блок заголовок, картинку и текст */
+	$(this).find('.title').clone().appendTo("#popup_inner");
+	$(this).find('.day').clone().appendTo("#popup_inner");
+	/* отображаю затемнение*/
+	$(".overlay").show();
+	/* центрирую попап по высоте, т.к. блок не фиксированной высоты и отображаю*/
+	var height = "-" + ($("#popup").height()+66)/2 + "px";
+	$("#popup").show().animate({marginTop:height}, 500);
+
  });
  /* при клике на кнопку закрыть или на затемнение попап закрывается */
 $(".overlay, #popup .close").click(function() {
-    $(".overlay, #popup").hide();
+	$(".overlay, #popup").hide();
  });
-}); 
+});	
 
 
 
