--- a/Apelsin_test/index.html
+++ b/Apelsin_test/index.html
@@ -135,109 +135,88 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td><a class="title" id="anchor" href="#">Los Angeles - Teterboro</a></td>
+					<td><a class="title" id="anchor1" href="#">Los Angeles - Teterboro</a></td>
 					<td><a class="day" href="#">28 февраля 2018 года</a></td>
 					<td><a href="#">LearJet 45 XR</a></td>
-					<td><a class="order" href="#enchor">заказать рейс</a></td>
+					<td><a class="order" href="#enchor1">заказать рейс</a></td>
 				</tr>
-
-
-<!-- <ul>
-    <li class="div2">
-        <img src="img/arrbluesm.png"> 
-        <div class="title">Заголовок 1</div>
-        <div class="txt">текст 1</div>
-    </li>
-    <li class="div2">
-        <img src="img/arrowblack.png"> 
-        <div class="title">Заголовок 2</div>
-        <div class="txt">текст 2</div>
-    </li>
-    <li class="div2">
-        <img src="img/arrowblue.png"> 
-        <div class="title">Заголовок 3</div>
-        <div class="txt">текст 3</div>
-    </li>
-</ul> -->
-
-
 				<tr>
-					<td><a href="#">Boca Raton - West Chicago</a></td>
-					<td><a href="#">28 февраля 2018 года</a></td>
+					<td><a class="title" id="anchor2" href="#">Boca Raton - West Chicago</a></td>
+					<td><a class="day" href="#">28 февраля 2018 года</a></td>
 					<td><a href="#">LearJet 40</a></td>
-					<td><a class="order" href="#">заказать рейс</a></td>
+					<td><a class="order" href="#enchor2">заказать рейс</a></td>
 				</tr>
 				<tr>
-					<td><a href="#">Los Angeles - Teterboro</a></td>
-					<td><a href="#">28 февраля 2018 года</a></td>
+					<td><a class="title" id="anchor3" href="#">Los Angeles - Teterboro</a></td>
+					<td><a class="day" href="#">28 февраля 2018 года</a></td>
 					<td><a href="#">LearJet 60 XR</a></td>
-					<td><a class="order" href="#">заказать рейс</a></td>
+					<td><a class="order" href="#enchor3">заказать рейс</a></td>
 				</tr>
 				<tr>
-					<td><a href="#">Boca Raton - West Chicago</a></td>
-					<td><a href="#">01 марта 2018 года</a></td>
+					<td><a class="title" id="anchor4" href="#">Boca Raton - West Chicago</a></td>
+					<td><a class="day" href="#">01 марта 2018 года</a></td>
 					<td><a href="#">Global 5000</a></td>
-					<td><a class="order" href="#">заказать рейс</a></td>
+					<td><a class="order" href="#enchor4">заказать рейс</a></td>
 				</tr>
 				<tr>
-					<td><a href="#">Los Angeles - Teterboro</a></td>
-					<td><a href="#">02 марта 2018 года</a></td>
+					<td><a class="title" id="anchor5" href="#">Los Angeles - Teterboro</a></td>
+					<td><a class="day" href="#">02 марта 2018 года</a></td>
 					<td><a href="#">Challenger 300</a></td>
-					<td><a class="order" href="#">заказать рейс</a></td>
+					<td><a class="order" href="#enchor5">заказать рейс</a></td>
 				</tr>
 				<tr>
-					<td><a href="#">Boca Raton - West Chicago</a></td>
-					<td><a href="#">02 марта 2018 года</a></td>
+					<td><a class="title" id="anchor6" href="#">Boca Raton - West Chicago</a></td>
+					<td><a class="day" href="#">02 марта 2018 года</a></td>
 					<td><a href="#">Challenger 850</a></td>
-					<td><a class="order" href="#">заказать рейс</a></td>
+					<td><a class="order" href="#enchor6">заказать рейс</a></td>
 				</tr>
 				<tr>
-					<td><a href="#">Los Angeles - Teterboro</a></td>
-					<td><a href="#">04 марта 2018 года</a></td>
+					<td><a class="title" id="anchor7" href="#">Los Angeles - Teterboro</a></td>
+					<td><a class="day" href="#">04 марта 2018 года</a></td>
 					<td><a href="#">P.180 Avanti II</a></td>
-					<td><a class="order" href="#">заказать рейс</a></td>
+					<td><a class="order" href="#enchor7">заказать рейс</a></td>
 				</tr>
 				<tr>
-					<td><a href="#">Boca Raton - West Chicago</a></td>
-					<td><a href="#">04 марта 2018 года</a></td>
+					<td><a class="title" id="anchor8" href="#">Boca Raton - West Chicago</a></td>
+					<td><a class="day" href="#">04 марта 2018 года</a></td>
 					<td><a href="#">LearJet 45 XR</a></td>
-					<td><a class="order" href="#">заказать рейс</a></td>
+					<td><a class="order" href="#enchor8">заказать рейс</a></td>
 				</tr>
 				<tr>
-					<td><a href="#">Los Angeles - Teterboro</a></td>
-					<td><a href="#">05 марта 2018 года</a></td>
+					<td><a class="title" id="anchor9" href="#">Los Angeles - Teterboro</a></td>
+					<td><a class="day" href="#">05 марта 2018 года</a></td>
 					<td><a href="#">LearJet 40</a></td>
-					<td><a class="order" href="#">заказать рейс</a></td>
+					<td><a class="order" href="#enchor9">заказать рейс</a></td>
 				</tr>
 				<tr>
-					<td><a href="#">Boca Raton - West Chicago</a></td>
-					<td><a href="#">07 марта 2018 года</a></td>
+					<td><a class="title" id="anchor10" href="#">Boca Raton - West Chicago</a></td>
+					<td><a class="day" href="#">07 марта 2018 года</a></td>
 					<td><a href="#">LearJet 60 XR</a></td>
-					<td><a class="order" href="#">заказать рейс</a></td>
+					<td><a class="order" href="#enchor10">заказать рейс</a></td>
 				</tr>
 				<tr>
-					<td><a href="#">Los Angeles - Teterboro</a></td>
-					<td><a href="#">07 марта 2018 года</a></td>
+					<td><a class="title" id="anchor11" href="#">Los Angeles - Teterboro</a></td>
+					<td><a class="day" href="#">07 марта 2018 года</a></td>
 					<td><a href="#">Global 5000</a></td>
-					<td><a class="order" href="#">заказать рейс</a></td>
+					<td><a class="order" href="#enchor11">заказать рейс</a></td>
 				</tr>
 				<tr>
-					<td><a href="#">Boca Raton - West Chicago</a></td>
-					<td><a href="#">07 марта 2018 года</a></td>
+					<td><a class="title" id="anchor12" href="#">Boca Raton - West Chicago</a></td>
+					<td><a class="day" href="#">07 марта 2018 года</a></td>
 					<td><a href="#">Challenger 300</a></td>
-					<td><a class="order" href="#">заказать рейс</a></td>
+					<td><a class="order" href="#enchor12">заказать рейс</a></td>
 				</tr>
 				<tr>
-					<td><a href="#">Los Angeles - Teterboro</a></td>
-					<td><a href="#">09 марта 2018 года</a></td>
+					<td><a class="title" id="anchor13" href="#">Los Angeles - Teterboro</a></td>
+					<td><a class="day" href="#">09 марта 2018 года</a></td>
 					<td><a href="#">Challenger 850</a></td>
-					<td><a class="order" href="#">заказать рейс</a></td>
+					<td><a class="order" href="#enchor13">заказать рейс</a></td>
 				</tr>
 				<tr>
-					<td><a href="#">Boca Raton - West Chicago</a></td>
-					<td><a href="#">10 марта 2018 года</a></td>
+					<td><a class="title" id="anchor14" href="#">Boca Raton - West Chicago</a></td>
+					<td><a class="day" href="#">10 марта 2018 года</a></td>
 					<td><a href="#">P.180 Avanti II</a></td>
-					<td><a class="order" href="#">заказать рейс</a></td>
+					<td><a class="order" href="#enchor14">заказать рейс</a></td>
 				</tr>
 			</tbody>
 		</table>
@@ -283,45 +262,37 @@
 			<div class="logoname">Design &amp; Development by</div>
 		</div>
 	</footer>
-
-
-
-
-
-
-
 	<script>
- $(function($) {
-	 /* создание попапа с кнокой закрытия и затемняющего блока  */
-  $("body").append("<div class='overlay'></div><div id='popup'><span class='close'></span><div id='popup_inner'></div></div>");
-	 /* клик по элементу списка  */
- $('.order').click(function() {
-	 /* очищаю содержимое попапа  */
-	$("#popup_inner").empty();
-	 /* теперь по очереди переношу в сплывающий блок заголовок, картинку и текст */
-	$(this).find('.title').clone().appendTo("#popup_inner");
-	$(this).find('.day').clone().appendTo("#popup_inner");
-	/* отображаю затемнение*/
-	$(".overlay").show();
-	/* центрирую попап по высоте, т.к. блок не фиксированной высоты и отображаю*/
-	var height = "-" + ($("#popup").height()+66)/2 + "px";
-	$("#popup").show().animate({marginTop:height}, 500);
+		$(function($) {
+			/* создание попапа с кнопкой закрытия и затемняющего блока  */
+			$("body").append("<div class='overlay'></div><div id='popup'><span class='close'></span><div id='popup_inner'></div></div>");
+			/* клик по элементу списка  */
+			$('.order').click(function() {
+				/* очищение содержимого попапа  */
+				$("#popup_inner").empty();
+				/* клонирование данных в сплывающий блок названия рейса и дата */
+				$(this).closest('tr').find('.title').clone().appendTo("#popup_inner");
+				$(this).closest('tr').find('.day').clone().appendTo("#popup_inner");
+				/* отображение затемнения*/
+				$(".overlay").show();
+				/* центрирование попапа по высоте*/
+				var height = "-" + ($("#popup").height()+66)/2 + "px";
+				$("#popup").show().animate({marginTop:height}, 500);
 
- });
- /* при клике на кнопку закрыть или на затемнение попап закрывается */
-$(".overlay, #popup .close").click(function() {
-	$(".overlay, #popup").hide();
- });
-});	
+			});
+			/* при клике на кнопку закрыть или на затемнение попап закрывается */
+			$(".overlay, #popup .close").click(function() {
+				$(".overlay, #popup").hide();
+			});
+		});	
 
-
-
-
-		/*function popupFunction() {
+		/*всплывающий блок при клике на актуальные рейсы*/
+		function popupFunction() {
 			var popup = document.getElementById("myPopup");
 			popup.classList.toggle("shown");
-		}*/
+		}
 
+		/*menu*/
 		$('.show').on('click', function() {
 			if($('.menu-nav').hasClass('hide')){
 				$('.menu-nav').removeClass('hide');
